--- a/contracts/design-tokens.yaml
+++ b/contracts/design-tokens.yaml
@@ -1,235 +1,232 @@
 # Design Tokens Contract
-# Single source of truth for all design system values
-# Updated by: DESIGNER agent (owner)
-# Consumed by: FRONT agent
-# Purpose: Prevent hardcoded values, ensure visual consistency
+# Owner: DESIGNER | Consumers: FRONTEND
+# Last Updated: [DATE]
+#
+# USAGE:
+# - Frontend must import from @/design-tokens
+# - Never hardcode colors, spacing, or typography values
+# - Use Tailwind classes that map to these tokens
 
 version: "1.0"
-last_updated: "[DATE]"
 
-colors: {}
-  # Example structure:
-  # primary:
-  #   css_var: "--color-primary"
-  #   value: "#0066CC"
-  #   tailwind: "primary-500"
-  #   js_export: "colors.primary"
-  #   usage: "Main CTAs, links, brand elements"
-  #   contrast_ratio: "4.5:1 on white (WCAG AA)"
-  #
-  # primary-hover:
-  #   css_var: "--color-primary-hover"
-  #   value: "#0052A3"
-  #   tailwind: "primary-600"
-  #   js_export: "colors.primaryHover"
-  #   usage: "Hover state for primary elements"
-  #
-  # neutral-50:
-  #   css_var: "--color-neutral-50"
-  #   value: "#F9FAFB"
-  #   tailwind: "neutral-50"
-  #   js_export: "colors.neutral[50]"
-  #   usage: "Lightest gray, backgrounds"
+# =============================================================================
+# COLORS
+# =============================================================================
 
-typography: {}
-  # Font families:
-  # base:
-  #   css_var: "--font-family-base"
-  #   value: "'Inter', system-ui, -apple-system, sans-serif"
-  #   tailwind: "font-sans"
-  #   fallback: "system-ui, -apple-system, sans-serif"
-  #
-  # Font sizes (with line heights):
-  # size-xs:
-  #   css_var: "--font-size-xs"
-  #   value: "12px"
-  #   line_height: "16px"
-  #   tailwind: "text-xs"
-  #   usage: "Small labels, captions"
-  #
-  # size-sm:
-  #   css_var: "--font-size-sm"
-  #   value: "14px"
-  #   line_height: "20px"
-  #   tailwind: "text-sm"
-  #
-  # size-base:
-  #   css_var: "--font-size-base"
-  #   value: "16px"
-  #   line_height: "24px"
-  #   tailwind: "text-base"
-  #   usage: "Body text, default size"
-  #
-  # Font weights:
-  # weight-regular:
-  #   css_var: "--font-weight-regular"
-  #   value: "400"
-  #   tailwind: "font-normal"
-  #
-  # weight-medium:
-  #   css_var: "--font-weight-medium"
-  #   value: "500"
-  #   tailwind: "font-medium"
-  #
-  # weight-bold:
-  #   css_var: "--font-weight-bold"
-  #   value: "700"
-  #   tailwind: "font-bold"
+colors:
+  # Primary Brand Color
+  primary:
+    50: "#eff6ff"
+    100: "#dbeafe"
+    200: "#bfdbfe"
+    300: "#93c5fd"
+    400: "#60a5fa"
+    500: "#3b82f6"   # Main brand color
+    600: "#2563eb"   # Hover
+    700: "#1d4ed8"   # Active
+    800: "#1e40af"
+    900: "#1e3a8a"
+    950: "#172554"
 
-spacing: {}
-  # Base unit (4px or 8px):
-  # unit:
-  #   css_var: "--spacing-unit"
-  #   value: "8px"
-  #   tailwind: "2"
-  #   description: "Base spacing unit"
-  #
-  # Scale (multiples of base unit):
-  # xs:
-  #   css_var: "--spacing-xs"
-  #   value: "4px"
-  #   tailwind: "1"
-  #   multiplier: "0.5x"
-  #
-  # sm:
-  #   css_var: "--spacing-sm"
-  #   value: "8px"
-  #   tailwind: "2"
-  #   multiplier: "1x"
-  #
-  # md:
-  #   css_var: "--spacing-md"
-  #   value: "16px"
-  #   tailwind: "4"
-  #   multiplier: "2x"
-  #
-  # lg:
-  #   css_var: "--spacing-lg"
-  #   value: "24px"
-  #   tailwind: "6"
-  #   multiplier: "3x"
+  # Neutral/Gray
+  gray:
+    50: "#f9fafb"
+    100: "#f3f4f6"
+    200: "#e5e7eb"
+    300: "#d1d5db"
+    400: "#9ca3af"
+    500: "#6b7280"
+    600: "#4b5563"
+    700: "#374151"
+    800: "#1f2937"
+    900: "#111827"
+    950: "#030712"
 
-borders: {}
-  # Border radius:
-  # radius-none:
-  #   css_var: "--radius-none"
-  #   value: "0px"
-  #   tailwind: "rounded-none"
-  #
-  # radius-sm:
-  #   css_var: "--radius-sm"
-  #   value: "4px"
-  #   tailwind: "rounded-sm"
-  #
-  # radius-base:
-  #   css_var: "--radius-base"
-  #   value: "8px"
-  #   tailwind: "rounded-lg"
-  #
-  # Border widths:
-  # width-thin:
-  #   css_var: "--border-width-thin"
-  #   value: "1px"
-  #   tailwind: "border"
-  #
-  # width-thick:
-  #   css_var: "--border-width-thick"
-  #   value: "2px"
-  #   tailwind: "border-2"
+  # Semantic Colors
+  success:
+    50: "#f0fdf4"
+    100: "#dcfce7"
+    500: "#22c55e"
+    600: "#16a34a"
+    700: "#15803d"
 
-elevation: {}
-  # Shadow levels:
-  # none:
-  #   css_var: "--shadow-none"
-  #   value: "none"
-  #   tailwind: "shadow-none"
-  #
-  # low:
-  #   css_var: "--shadow-low"
-  #   value: "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)"
-  #   tailwind: "shadow-sm"
-  #   usage: "Subtle elevation, cards"
-  #
-  # medium:
-  #   css_var: "--shadow-medium"
-  #   value: "0 4px 6px rgba(0,0,0,0.1), 0 2px 4px rgba(0,0,0,0.06)"
-  #   tailwind: "shadow-md"
-  #   usage: "Dropdowns, popovers"
-  #
-  # high:
-  #   css_var: "--shadow-high"
-  #   value: "0 10px 25px rgba(0,0,0,0.15), 0 6px 10px rgba(0,0,0,0.1)"
-  #   tailwind: "shadow-xl"
-  #   usage: "Modals, important UI"
+  warning:
+    50: "#fffbeb"
+    100: "#fef3c7"
+    500: "#f59e0b"
+    600: "#d97706"
+    700: "#b45309"
 
-animations: {}
-  # Durations:
-  # duration-instant:
-  #   css_var: "--duration-instant"
-  #   value: "100ms"
-  #   usage: "Instant feedback, micro-interactions"
-  #
-  # duration-fast:
-  #   css_var: "--duration-fast"
-  #   value: "150ms"
-  #   usage: "Hovers, toggles"
-  #
-  # duration-normal:
-  #   css_var: "--duration-normal"
-  #   value: "250ms"
-  #   usage: "Most transitions"
-  #
-  # duration-slow:
-  #   css_var: "--duration-slow"
-  #   value: "400ms"
-  #   usage: "Slides, major state changes"
-  #
-  # Easing functions:
-  # easing-linear:
-  #   css_var: "--easing-linear"
-  #   value: "linear"
-  #   usage: "Continuous animations"
-  #
-  # easing-ease-in:
-  #   css_var: "--easing-ease-in"
-  #   value: "cubic-bezier(0.4, 0.0, 1, 1)"
-  #   usage: "Elements leaving screen"
-  #
-  # easing-ease-out:
-  #   css_var: "--easing-ease-out"
-  #   value: "cubic-bezier(0.0, 0.0, 0.2, 1)"
-  #   usage: "Elements entering screen"
-  #
-  # easing-ease-in-out:
-  #   css_var: "--easing-ease-in-out"
-  #   value: "cubic-bezier(0.4, 0.0, 0.2, 1)"
-  #   usage: "Standard transitions"
+  error:
+    50: "#fef2f2"
+    100: "#fee2e2"
+    500: "#ef4444"
+    600: "#dc2626"
+    700: "#b91c1c"
 
-breakpoints: {}
-  # Responsive breakpoints:
-  # mobile:
-  #   value: "640px"
-  #   tailwind: "sm"
-  #   description: "Small devices (phones)"
-  #
-  # tablet:
-  #   value: "768px"
-  #   tailwind: "md"
-  #   description: "Medium devices (tablets)"
-  #
-  # desktop:
-  #   value: "1024px"
-  #   tailwind: "lg"
-  #   description: "Large devices (desktops)"
-  #
-  # wide:
-  #   value: "1280px"
-  #   tailwind: "xl"
-  #   description: "Extra large devices"
+  info:
+    50: "#eff6ff"
+    100: "#dbeafe"
+    500: "#3b82f6"
+    600: "#2563eb"
+    700: "#1d4ed8"
 
-# Verification rules:
-# - Frontend MUST import tokens, not hardcode values
-# - Tailwind config MUST be generated from this file
-# - CSS variables MUST be defined in root
-# - No magic numbers in component styles
-# - All design decisions should reference tokens
+  # Special
+  white: "#ffffff"
+  black: "#000000"
+  transparent: "transparent"
+
+# =============================================================================
+# TYPOGRAPHY
+# =============================================================================
+
+typography:
+  fontFamily:
+    sans: "Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
+    mono: "JetBrains Mono, Menlo, Monaco, Consolas, monospace"
+    display: "Inter, -apple-system, sans-serif"
+
+  fontSize:
+    xs: "0.75rem"      # 12px
+    sm: "0.875rem"     # 14px
+    base: "1rem"       # 16px
+    lg: "1.125rem"     # 18px
+    xl: "1.25rem"      # 20px
+    2xl: "1.5rem"      # 24px
+    3xl: "1.875rem"    # 30px
+    4xl: "2.25rem"     # 36px
+    5xl: "3rem"        # 48px
+
+  fontWeight:
+    light: 300
+    normal: 400
+    medium: 500
+    semibold: 600
+    bold: 700
+
+  lineHeight:
+    none: 1
+    tight: 1.25
+    snug: 1.375
+    normal: 1.5
+    relaxed: 1.625
+    loose: 2
+
+  letterSpacing:
+    tighter: "-0.05em"
+    tight: "-0.025em"
+    normal: "0"
+    wide: "0.025em"
+    wider: "0.05em"
+
+# =============================================================================
+# SPACING
+# =============================================================================
+
+spacing:
+  0: "0"
+  px: "1px"
+  0.5: "0.125rem"    # 2px
+  1: "0.25rem"       # 4px
+  1.5: "0.375rem"    # 6px
+  2: "0.5rem"        # 8px
+  2.5: "0.625rem"    # 10px
+  3: "0.75rem"       # 12px
+  3.5: "0.875rem"    # 14px
+  4: "1rem"          # 16px
+  5: "1.25rem"       # 20px
+  6: "1.5rem"        # 24px
+  7: "1.75rem"       # 28px
+  8: "2rem"          # 32px
+  9: "2.25rem"       # 36px
+  10: "2.5rem"       # 40px
+  11: "2.75rem"      # 44px
+  12: "3rem"         # 48px
+  14: "3.5rem"       # 56px
+  16: "4rem"         # 64px
+  20: "5rem"         # 80px
+  24: "6rem"         # 96px
+
+# =============================================================================
+# BORDERS
+# =============================================================================
+
+borders:
+  radius:
+    none: "0"
+    sm: "0.125rem"     # 2px
+    default: "0.25rem" # 4px
+    md: "0.375rem"     # 6px
+    lg: "0.5rem"       # 8px
+    xl: "0.75rem"      # 12px
+    2xl: "1rem"        # 16px
+    3xl: "1.5rem"      # 24px
+    full: "9999px"
+
+  width:
+    0: "0"
+    1: "1px"
+    2: "2px"
+    4: "4px"
+    8: "8px"
+
+# =============================================================================
+# SHADOWS
+# =============================================================================
+
+shadows:
+  sm: "0 1px 2px 0 rgb(0 0 0 / 0.05)"
+  default: "0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1)"
+  md: "0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1)"
+  lg: "0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)"
+  xl: "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)"
+  2xl: "0 25px 50px -12px rgb(0 0 0 / 0.25)"
+  inner: "inset 0 2px 4px 0 rgb(0 0 0 / 0.05)"
+  none: "none"
+
+# =============================================================================
+# BREAKPOINTS
+# =============================================================================
+
+breakpoints:
+  sm: "640px"
+  md: "768px"
+  lg: "1024px"
+  xl: "1280px"
+  2xl: "1536px"
+
+# =============================================================================
+# TRANSITIONS
+# =============================================================================
+
+transitions:
+  duration:
+    75: "75ms"
+    100: "100ms"
+    150: "150ms"
+    200: "200ms"
+    300: "300ms"
+    500: "500ms"
+    700: "700ms"
+    1000: "1000ms"
+
+  timing:
+    linear: "linear"
+    ease: "ease"
+    easeIn: "cubic-bezier(0.4, 0, 1, 1)"
+    easeOut: "cubic-bezier(0, 0, 0.2, 1)"
+    easeInOut: "cubic-bezier(0.4, 0, 0.2, 1)"
+
+# =============================================================================
+# Z-INDEX
+# =============================================================================
+
+zIndex:
+  0: 0
+  10: 10       # Sticky elements
+  20: 20       # Dropdowns
+  30: 30       # Fixed headers
+  40: 40       # Modals backdrop
+  50: 50       # Modals
+  60: 60       # Notifications
+  70: 70       # Tooltips
